syntax = "proto3";

package grntx.api.v1;

option go_package = "github.com/qwond/grntx/api/v1";

service RatesService {
  rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GetRatesRequest {
  string symbol = 1; 
}

message Rate {
  string pair      = 1;
  string askUnit   = 2;
  string bidUnit   = 3;
  int64  askPrice  = 4;
  int64  bidPrice  = 5;
  int64  precision = 6;
  int64  timestamp = 7;
}

message GetRatesResponse {
  repeated Rate rates = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}